Paragraph spacing fix

--- a/_common/styles/general.scss
+++ b/_common/styles/general.scss
@@ -56,6 +56,7 @@ h5 {
 p {
   font-size: 18px;
   line-height: 28px;
+  margin-bottom: 36px;
 }
 
 a {
@@ -101,7 +102,7 @@ td:nth-child(1){
   .navbar-brand{
     height: 80px;
   }
-  
+
   .navbar-collapse,
   .navbar-form {
     border: none;
